# lab_2_sem_3

qt_test/: ArrayIterator.h  ArraySequence.h  Book.h  BookCardComporator.cpp  BookCardComporator.h  BubbleSort.h  CMakeLists.txt  Complex.h  ComplexComporator.h  DefaultComporator.h  Generator.cpp  Generator.h  HeadSorter.h  HeapSort.h  Person.h  QuickSort.h  Sequence.h  SortingGraphsDialog.h  choosedatasource.cpp  choosedatasource.h  choosesortingmethod.cpp  choosesortingmethod.h  enternumberofbooks.cpp  enternumberofbooks.h  input.csv  inputdialog.cpp  inputdialog.h  inputdialogBooks.h  main.cpp  mainwindow.cpp  mainwindow.h  output.csv  persongenerator.cpp  showDataDialog.h  sortchoicedialog.cpp  sortchoicedialog.h  sortchoicedialogBook.cpp  sortchoicedialogBook.h  sorteddatadisplay.cpp  sorteddatadisplay.h  (+3 more)
